// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`against arrow snapshots 1`] = `
<svg
  className="arrow"
  height={409}
  style={
    Object {
      "bottom": -1,
      "left": 0,
    }
  }
  width={400}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 0 408 C 240 360, 160 56, 400 8"
  />
  <circle
    className="arrow__head"
    cx={400}
    cy={8}
    r={8}
  />
</svg>
`;

exports[`against arrow snapshots 2`] = `
<svg
  className="arrow"
  height={309}
  style={
    Object {
      "bottom": 92,
      "left": 0,
    }
  }
  width={400}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 0 1 C 240 37, 160 265, 400 301"
  />
  <circle
    className="arrow__head"
    cx={400}
    cy={301}
    r={8}
  />
</svg>
`;

exports[`against arrow snapshots 3`] = `
<svg
  className="arrow"
  height={409}
  style={
    Object {
      "bottom": -8,
      "left": 0,
    }
  }
  width={8}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 0 1 C 0 49, 0 353, 0 401"
  />
  <circle
    className="arrow__head"
    cx={0}
    cy={401}
    r={8}
  />
</svg>
`;

exports[`against arrow snapshots 4`] = `
<svg
  className="arrow"
  height={16}
  style={
    Object {
      "bottom": 392,
      "left": 0,
    }
  }
  width={400}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 400 8 C 160 8, 240 8, 0 8"
  />
  <circle
    className="arrow__head"
    cx={0}
    cy={8}
    r={8}
  />
</svg>
`;
